# doggytype

./: Cargo.toml  README.md
src/: keybinds.rs  main.rs  typing.rs
