[package]
name = "doggytype"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
rand_word = "0.1.18"
ratatui = { version = "0.22.0", features = ["all-widgets", "macros", "serde", "termion", "termwiz"] }
